<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/connectionTV"
        />

    <TextView
        android:id="@+id/connectionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toTopOf="@id/emailET"
        />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/red2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionTV"
        app:layout_constraintBottom_toTopOf="@+id/emailET"
        android:text="@string/app_name"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordTV"
        app:layout_constraintEnd_toStartOf="@id/emailET"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toEndOf="@id/guid_vert_03"
        app:layout_constraintEnd_toEndOf="@id/guid_vert_09"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordET"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/passwordET"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@id/guid_vert_03"
        app:layout_constraintEnd_toEndOf="@id/guid_vert_09"
        app:layout_constraintTop_toBottomOf="@id/emailET"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_link"
        android:textColor="@color/website_blue"
        android:autoLink="web"
        android:id="@+id/sign_up_link_redirection"
        android:layout_centerInParent="true"
        android:linksClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        app:layout_constraintBottom_toTopOf="@id/connection_btn" />

    <Button
        android:id="@+id/connection_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_vert_03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_vert_09"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />



</androidx.constraintlayout.widget.ConstraintLayout>